--- a/styles/App.scss
+++ b/styles/App.scss
@@ -16,9 +16,6 @@ ul,
 table {
   td {
     &:last-child {
-      button {
-        display: none !important;
-      }
       pre {
         margin: 0;
         white-space: pre-wrap;
@@ -34,9 +31,11 @@ table {
 }
 
 code {
-  font-size: 87.5% !important;
   color: orange !important;
-  word-wrap: break-word !important;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  word-wrap: unset;
 }
 
 .notification {
